fixed scrolling issue by removing overflow: hidden

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@
   body {
     font-family: 'Assistant', sans-serif;
     color: #F5F5F5;
-    overflow: hidden;
   }
   
   a {
